test/fails/bad_generics/tags7.lgl
tag a is vec2;
tag b is vec2;
tag c is b;
tag d is b;
tag e is c;

c low_cast<`t : b>(a x) { // Can't return c cause c < b
    a->`t a_t = [[.5, .5], [1.5, .5]];
    return a_t * x;
}

void main() {
    print 1;
}